[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/EmptyScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneArea/SceneArea.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/blue_button12.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/red_button12.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scenes/corner_empty_scene_600x330.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/SourceHanSansCN/SubsetOTF/CN/SourceHanSansCN-Regular.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 165 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="SceneArea" type="Area2D" groups=["scene_area"]]
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 300, 165 )
shape = SubResource( 1 )

[node name="Scene" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 300, 165 )
texture = ExtResource( 5 )

[node name="ZoomButton" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = 9.0
margin_right = 37.0
margin_bottom = 29.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 10.0
margin_top = -20.0
margin_right = 95.0
margin_bottom = 8.0

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = -21.0
margin_right = 95.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "与场景交互"
align = 1
valign = 1

[connection signal="mouse_entered" from="ZoomButton" to="." method="_on_ZoomButton_mouse_entered"]
[connection signal="mouse_exited" from="ZoomButton" to="." method="_on_ZoomButton_mouse_exited"]
